Aplicação de Receitas

--- a/apps/templates/partials/_footer.html
+++ b/apps/templates/partials/_footer.html
@@ -5,12 +5,12 @@
             <div class="col-12 h-100 d-flex flex-wrap align-items-center justify-content-between">
                 <!-- Footer Social Info -->
                 <div class="footer-social-info text-right">
-                    <a href="https://github.com/brnocesar" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a>
-                    <a href="https://www.linkedin.com/in/brnocesar" target="_blank"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
+                    <a href="https://github.com/JacksonRicardo" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a>
+                    <a href="https://www.linkedin.com/in/jackson-r100/" target="_blank"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
                 </div>
                 <!-- Footer Logo -->
                 <div class="footer-logo">
-                    <a href="{% url 'receitas.index' %}"><img src="{% static 'img/core-img/logo.png' %}" alt=""></a>
+                    <a href="{% url 'receitas.index' %}"><img src="{% static 'img/core-img/logo1.png' %}" alt=""></a>
                 </div>
             </div>
         </div>
