--- a/apps/templates/partials/_header.html
+++ b/apps/templates/partials/_header.html
@@ -24,8 +24,8 @@
                 <!-- Top Social Info -->
                 <div class="col-12 col-sm-6">
                     <div class="top-social-info text-right">
-                        <a href="https://github.com/brnocesar" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a>
-                        <a href="https://www.linkedin.com/in/brnocesar" target="_blank"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
+                        <a href="https://github.com/JacksonRicardo" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a>
+                        <a href="https://www.linkedin.com/in/jackson-r100/" target="_blank"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
                     </div>
                 </div>
             </div>
@@ -40,7 +40,7 @@
                 <nav class="classy-navbar justify-content-between" id="deliciousNav">
 
                     <!-- Logo -->
-                    <a class="nav-brand" href="{% url 'receitas.index' %}"><img src="{% static 'img/core-img/logo.png' %}" alt=""></a>
+                    <a class="nav-brand" href="{% url 'receitas.index' %}"><img src="{% static 'img/core-img/logo1.png' %}" alt=""></a>
 
                     <!-- Navbar Toggler -->
                     <div class="classy-navbar-toggler">
